broken style on icon btn fix

--- a/Style/Style.css
+++ b/Style/Style.css
@@ -65,18 +65,21 @@ body {
 
 @media(max-width: 515px) {
   #nav_toggle_btn {
-    display: block;
+    /* display: block; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(0, 255, 55);
     border: none;
     height: 2.5em;
     width: 2.5em;
     border-radius: 1em;
     position: relative;
-    color: rgb(0, 66, 33);
+    /* color: rgb(0, 66, 33); */
     margin-right: 5%;
     z-index: 10;
-    font-weight: 800;
-    font-size: medium;
+    /* font-weight: 800; */
+    /* font-size: medium; */
   }
 }
 
@@ -91,7 +94,7 @@ body {
 
 @media(max-width: 515px) {
   #nav_toggle {
-    background-color: rgb(151, 149, 129, 0.85);
+    background-color: rgb(151, 149, 129, 0.95);
     position: fixed;
     height: 100vh;
     width: 100vw;
